--- a/views/shared/head.ejs
+++ b/views/shared/head.ejs
@@ -1,6 +1,7 @@
 <head>
-    <title><%= title %></title>
-    <% css.forEach(style => { %>
-        <link rel='stylesheet' type="text/css" href='<%= `/css/${style}.css` %>') />
-    <% }); %>
+  <title><%= title %></title>
+  <link rel="stylesheet" type="text/css" href="<%= `/css/main.css` %>" ) />
+  <% css.forEach(style => { %>
+  <link rel="stylesheet" type="text/css" href="<%= `/css/${style}.css` %>" ) />
+  <% }); %>
 </head>
