--- a/views/ticket/create.ejs
+++ b/views/ticket/create.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
   <%- include('../shared/head', {css: ['login', 'navbar']}) %>
   <body>
-    <%- include('../shared/navbar', {}) %>
+    <%- include('../shared/navbar', {admin}) %>
     <div>
       <h3>Create a new ticket</h3>
       <form method="POST" action="/ticket/create">
