--- a/views/ticket/show.ejs
+++ b/views/ticket/show.ejs
@@ -2,7 +2,7 @@
 <html lang="fr">
   <%- include('../shared/head', {css: ['details', 'navbar']}) %>
   <body>
-    <%- include('../shared/navbar', {}) %>
+    <%- include('../shared/navbar', {admin}) %>
     <div class="details">
       <h1>Ticket Details</h1>
       <h2>Id : <%= ticket.id %></h2>
