--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -1,15 +1,18 @@
 nav {
-	background-color: #e1e1e1;
-	display: flex;
-	width: 100%;
-	height: 70px;
-	align-items: center;
+  background-color: #3d3d3d;
+  display: flex;
+  width: 100%;
+  height: 70px;
+  align-items: center;
 }
 
 nav a {
-	color: #fff;
-	font-weight: bold;
-	text-decoration: none;
-	margin-left: 100px;
-	cursor: pointer;
+  color: #fff;
+  font-weight: bold;
+  text-decoration: none;
+  margin-left: 100px;
+  cursor: pointer;
+}
+.nav_link-lastItem {
+  margin-left: 200px;
 }
