--- a/views/shared/navbar.ejs
+++ b/views/shared/navbar.ejs
@@ -1,5 +1,10 @@
 <nav>
-  <a href="/ticket" class="nav-link">Tickets</a>
-  <a href="/ticket/create" class="nav-link">Create Ticket</a>
-  <a href="/user/signout" class="nav-link">log out</a>
+  <div class="container">
+    <a href="/ticket" class="nav-link">Tickets</a>
+    <a href="/ticket/create" class="nav-link">Create Ticket</a>
+    <% if(admin){%>
+    <a href="/admin/signup" class="nav-link">Create new Admin</a>
+    <% } %>
+    <a href="/user/signout" class="nav-link nav_link-lastItem">log out</a>
+  </div>
 </nav>
