--- a/views/ticket/index.ejs
+++ b/views/ticket/index.ejs
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <%- include('../shared/head', {css: ['index', 'navbar']}) %>
+  <%- include('../shared/head', {title:"tickets",css: ['index', 'navbar']}) %>
   <body>
-    <%- include('../shared/navbar', {}) %>
+    <%- include('../shared/navbar', {admin}) %>
     <div>
       <h1>List of tickets</h1>
       <table>
         <thead>
           <tr>
             <th class="idTicket">Tichet ID</th>
+            <th class="idTicket">Title</th>
+            <th class="idTicket">email</th>
             <th class="showTicket">show Ticket</th>
             <th class="editTicket">Edit Ticket</th>
+            <th>Status</th>
           </tr>
         </thead>
         <tbody>
@@ -18,8 +21,16 @@
           %>
           <tr key="{index}">
             <td><%= ticket._id %></td>
+            <td><%= ticket.title %></td>
+            <td><%= user.email %></td>
             <td><a href="/ticket/<%= ticket._id %>" class="nav-link">view</a></td>
             <td><a href="/ticket/<%= ticket._id %>/edit" class="nav-link">edit</a></td>
+            <td>
+              <span <% if(ticket.completed){ %>
+                class="status_completed status_span" <% }else{ %>class="status_incomplete
+                status_span" <% } %>>
+              </span>
+            </td>
           </tr>
           <% } %>
         </tbody>
