--- a/views/account/adminsignup.ejs
+++ b/views/account/adminsignup.ejs
@@ -24,7 +24,7 @@
       </div>
       <div class="form-group">
         <label>not admin</label>
-        <input type="radio" name="isAdmin" value="no" />
+        <input type="radio" name="isAdmin" value="no" checked="checked" />
       </div>
       <div class="form-group">
         <input type="submit" class="btn btn-primary" />
