--- a/views/ticket/create.ejs
+++ b/views/ticket/create.ejs
@@ -15,12 +15,19 @@
           <label>Description:</label>
           <textarea type="text" class="form-control" name="description"></textarea>
         </div>
+        <% if (admin) { %>
 
         <div class="form-group">
           <label>Responsible:</label>
-          <input type="text" class="form-control" name="responsible" />
-        </div>
+          <select name="responsible" id="cars" class="form-control">
+            <%if(users.length > 0 ){%> <% users.forEach(user => { %>
 
+            <option value="<%=user._id%>"><%=user.email%></option>
+
+            <% }); } %>
+          </select>
+        </div>
+        <% } %>
         <div class="form-group">
           <label>Priority:</label>
           <div class="form-check form-check-inline">
