--- a/views/ticket/edit.ejs
+++ b/views/ticket/edit.ejs
@@ -20,14 +20,25 @@
         </div>
 
         <div class="form-group">
-          <label>Responsible:</label>
-          <input
-            type="text"
-            class="form-control"
-            name="responsible"
-            value="<%= ticket.responsible %>"
-          />
+        <label>Responsible:<%if(ticket.responsible !== null){%><%=ticket.responsible.email %><% } %>  </label>
         </div>
+        <% if (admin) { %>
+
+        <div class="form-group">
+          <label>assign ticket to:</label>
+          <select name="responsible" id="cars" class="form-control">
+            <%if(users.length > 0 ){%> <% users.forEach(user => { %>
+
+            <option value="<%=user._id%>"
+              <%if(ticket.responsible !== null) if(user.email ===ticket.responsible.email){ %>
+                selected
+              <% } %>
+              ><%=user.email%></option>
+
+            <% }); } %>
+          </select>
+        </div>
+        <% } %>
 
         <div class="form-group">
           <label>Priority:</label>
